# atlas

./: .clang-format  .dockerignore  .gitignore  .licenserc.yaml  AGENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Cargo.toml  QUICKSTART.md  README.md  SECURITY.md  _typos.toml  deny.toml  rust-toolchain.toml
crates/atlas-activation/: Cargo.toml
crates/atlas-activation/src/: lib.rs  traits.rs
crates/atlas-core/: Cargo.toml  build.rs
crates/atlas-core/src/: capabilities.rs  config.rs  device.rs  dtype.rs  error.rs  kernel.rs  lib.rs  registry.rs  stream.rs  target.rs  tensor.rs
crates/atlas-core/src/config/: dispatch.rs  factory.rs  methods.rs  tests.rs
crates/atlas-core/src/config/parsers/: gemma4.rs  minimax.rs  mistral.rs  mod.rs  quantization.rs  vision.rs
crates/atlas-embed/: Cargo.toml
crates/atlas-embed/src/: lib.rs  rope.rs  token.rs
crates/atlas-norm/: Cargo.toml
crates/atlas-norm/src/: lib.rs  traits.rs
crates/atlas-quant/: Cargo.toml
crates/atlas-quant/src/: fp8.rs  lib.rs  nvfp4.rs  traits.rs
crates/atlas-reduce/: Cargo.toml
crates/atlas-reduce/src/: lib.rs  traits.rs
crates/spark-model/: Cargo.toml
crates/spark-model/src/: engine.rs  factory.rs  layer.rs  lib.rs  mistral_loader.rs  precision_schedule.rs  preflight.rs  speculative.rs  tp_shard.rs  traits.rs  vision_preprocess.rs  weight_map.rs
crates/spark-model/src/engine/: tests.rs
crates/spark-model/src/factory/: build.rs  m2_setup.rs
crates/spark-model/src/layer/: transformer_layer.rs
crates/spark-model/src/layers/: deepseek_v4_mtp.rs  dense_ffn.rs  dflash_head.rs  ep_dispatch.rs  fp8_calibration.rs  mod.rs  mtp_head.rs  mtp_multi.rs  nemotron_mamba2.rs  nemotron_moe.rs  ops.rs  vision_encoder.rs
crates/spark-model/src/layers/dflash_head/: forward_block.rs  from_weights.rs  propose.rs
crates/spark-model/src/layers/moe/: forward.rs  forward_batched.rs  forward_ep.rs  forward_k2.rs  forward_k3.rs  forward_phase.rs  forward_prefill.rs  forward_prefill_fp8.rs  forward_prefill_phase.rs  forward_prefill_routed.rs  helpers_a.rs  helpers_b.rs  helpers_c.rs  init.rs  mod.rs
crates/spark-model/src/layers/mtp_head/: forward.rs  moe_forward.rs  new.rs
crates/spark-model/src/layers/nemotron_mamba2/: trait_impl.rs
crates/spark-model/src/layers/nemotron_moe/: decode_helpers.rs  prefill_fallback.rs  prefill_sorted.rs
crates/spark-model/src/layers/ops/: activations.rs  embeddings.rs  fp8_moe.rs  fp8_moe_batch_a.rs  fp8_moe_batch_b.rs  gemm_dense.rs  gemm_quant.rs  kv_cache.rs  moe_expert.rs  moe_expert_more.rs  moe_gate.rs  moe_grouped_a.rs  moe_grouped_b.rs  moe_prefill.rs  norm.rs  prefill_attn_a.rs  (+9 more)
crates/spark-model/src/model/: block_mgmt.rs  drop.rs  impl_a1_init.rs  impl_a2.rs  impl_a3.rs  impl_b1.rs  mod.rs  ssm_pool.rs  ssm_snapshot.rs  types.rs
crates/spark-model/src/quant_format/: compressed_tensors.rs  fp8_blockscaled.rs  mod.rs  modelopt.rs
crates/spark-model/src/tp_shard/: quant_shard.rs  tests.rs
crates/spark-model/src/traits/: model.rs
crates/spark-model/src/weight_loader/: deepseek_v4.rs  gemma4.rs  minimax.rs  mod.rs  nemotron.rs  qwen3.rs  qwen35.rs  qwen35_dense.rs  qwen3_vl.rs
crates/spark-model/src/weight_map/: expert.rs  fp8_lut.rs  loaders_fp8.rs  loaders_moe.rs  loaders_mtp.rs  model_a.rs  model_b.rs  moe.rs  nemotron.rs  quant_helpers.rs  quantize_fns.rs  quantized.rs  ssm_qwen35.rs  ssm_qwen35_more.rs  tests.rs
(+621 files in other folders)
