[package]
name = "atlas-embed"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas: embedding + RoPE position-encoding helpers — placeholder layer for future host-side primitives."
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
