[package]
name = "atlas-norm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas: normalization helpers (RMSNorm, LayerNorm) — placeholder layer for future host-side primitives."
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
