[package]
name = "atlas-reduce"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Atlas: reduction primitives (argmax, sum) — placeholder layer for future host-side reduction routines."
repository.workspace = true

[dependencies]
atlas-core = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
